--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    //This is the big bar with the 3 dots
+    <color name="colorPrimary">#0099cc</color>
+    //this is the little bar on the status bar
+    <color name="colorPrimaryDark">#0086b3</color>
+    //This is the Email Button at the bottom of the app
+    <color name="colorAccent">#007399</color>
 </resources>
