--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="291dp"
         android:layout_marginTop="591dp"
+        android:onClick="save"
         android:text="@string/title_activity_signup" />
 
     <TextView
