List with all Uni Buildings listed on the main page of the app

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="4dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Enter Username" />
+        android:hint="Enter Username" />
 
     <EditText
         android:id="@+id/passwordSignup"
@@ -70,7 +70,8 @@
         android:layout_marginTop="223dp"
         android:layout_marginEnd="2dp"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:hint="Provide a Password"/>
 
     <EditText
         android:id="@+id/userID"
@@ -84,6 +85,5 @@
         android:layout_marginEnd="2dp"
         android:ems="10"
         android:hint="Enter your SID"
-        android:inputType="number"
-        android:text="Enter ID" />
+        android:inputType="number" />
 </RelativeLayout>
