--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,20 +14,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="370dp"
-        android:layout_marginTop="25dp"
-        android:text="@string/please_login_to_continue"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="6dp"
+        android:text="Please Login to Continue"
         android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/buttonLogin"
+    <TextView
+        android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginBottom="12dp"
-        android:text="@string/login" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="130dp"
+        android:text="@string/username" />
 
     <EditText
         android:id="@+id/usernameEnter"
@@ -35,8 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="91dp"
-        android:layout_marginEnd="700dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="368dp"
         android:background="@drawable/roundedfield"
         android:ems="10"
         android:inputType="textPersonName"
@@ -44,14 +45,13 @@
 
     <EditText
         android:id="@+id/passwordEnter"
-        android:layout_width="211dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="366dp"
-        android:layout_marginTop="155dp"
-        android:layout_marginEnd="703dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="189dp"
+        android:layout_marginEnd="367dp"
         android:background="@drawable/roundedfield"
         android:ems="10"
         android:inputType="textPassword"
@@ -63,19 +63,30 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="281dp"
-        android:layout_marginTop="157dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="193dp"
         android:text="@string/password" />
 
-    <TextView
-        android:id="@+id/userName"
+    <Button
+        android:id="@+id/CameraButton"
+        android:layout_width="151dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="475dp"
+        android:layout_marginBottom="13dp"
+        android:onClick="takePicture"
+        android:text="Take a Picture" />
+
+    <Button
+        android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="281dp"
-        android:layout_marginTop="94dp"
-        android:text="@string/username" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="106dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/login" />
 
     <Button
         android:id="@+id/registerButton"
@@ -83,20 +94,30 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="117dp"
+        android:layout_marginStart="212dp"
         android:layout_marginBottom="12dp"
         android:text="@string/register" />
 
     <Button
-        android:id="@+id/cameraButton"
+        android:id="@+id/AuthFingerprint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="224dp"
-        android:layout_marginBottom="11dp"
-        android:onClick="onButtonClick"
-        android:text="@string/take_a_picture" />
+        android:layout_marginStart="309dp"
+        android:layout_marginBottom="12dp"
+        android:text="Fingerprint Auth" />
 
+    <ImageView
+        android:id="@+id/ViewPicture"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="443dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="38dp"
+        android:src="@mipmap/ic_launcher" />
 
 </RelativeLayout>
