--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,121 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+app:layout_behavior="@string/appbar_scrolling_view_behavior"
+tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/please_login_to_continue"
-        android:textSize="24sp" />
+<TextView
+    android:id="@+id/textView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="6dp"
+    android:layout_marginTop="6dp"
+    android:text="Login Page"
+    android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginBottom="12dp"
-        android:text="@string/login" />
+<Button
+    android:id="@+id/buttonLogin"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginStart="11dp"
+    android:layout_marginBottom="12dp"
+    android:text="@string/login" />
 
-    <EditText
-        android:id="@+id/usernameEnter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="89dp"
-        android:layout_marginEnd="95dp"
-        android:background="@drawable/roundedfield"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAlignment="center" />
+<EditText
+    android:id="@+id/passwordEnter"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="148dp"
+    android:layout_marginEnd="54dp"
+    android:background="@drawable/roundedfield"
+    android:ems="10"
+    android:inputType="textPassword"
+    android:textAlignment="center" />
 
-    <EditText
-        android:id="@+id/passwordEnter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="148dp"
-        android:layout_marginEnd="94dp"
-        android:background="@drawable/roundedfield"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:textAlignment="center" />
+<EditText
+    android:id="@+id/usernameEnter"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="89dp"
+    android:layout_marginEnd="55dp"
+    android:background="@drawable/roundedfield"
+    android:ems="10"
+    android:inputType="textPersonName"
+    android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="90dp"
-        android:text="@string/username" />
+<TextView
+    android:id="@+id/passWord"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="32dp"
+    android:layout_marginTop="153dp"
+    android:text="@string/password" />
 
-    <TextView
-        android:id="@+id/passWord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="153dp"
-        android:text="@string/password" />
+<TextView
+    android:id="@+id/userName"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="32dp"
+    android:layout_marginTop="90dp"
+    android:text="@string/username" />
 
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="117dp"
-        android:layout_marginBottom="12dp"
-        android:text="@string/register" />
+<Button
+    android:id="@+id/registerButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginStart="117dp"
+    android:layout_marginBottom="12dp"
+    android:text="@string/register" />
 
-    <Button
-        android:id="@+id/AuthFingerprint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="214dp"
-        android:layout_marginBottom="12dp"
-        android:text="Fingerprint Auth" />
+<Button
+    android:id="@+id/AuthFingerprint"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginStart="214dp"
+    android:layout_marginBottom="12dp"
+    android:text="Fingerprint Auth" />
 
-    <Button
-        android:id="@+id/CameraButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginBottom="93dp"
-        android:text="Take a Picture"
-        android:onClick="takePicture"/>
+<Button
+    android:id="@+id/CameraButton"
+    android:layout_width="151dp"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentBottom="true"
+    android:layout_marginStart="11dp"
+    android:layout_marginBottom="66dp"
+    android:onClick="takePicture"
+    android:text="Take a Picture" />
 
-    <ImageView
-        android:id="@+id/ViewPicture"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="306dp"
-        android:src="@mipmap/ic_launcher" />
+<ImageView
+    android:id="@+id/ViewPicture"
+    android:layout_width="250dp"
+    android:layout_height="250dp"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginStart="72dp"
+    android:layout_marginTop="257dp"
+    android:src="@mipmap/ic_launcher" />
 
 </RelativeLayout>
