Activity Home Portrait and Landscape Orientations are complete

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,39 +8,30 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="313dp"
-        android:layout_marginTop="669dp"
-        android:layout_marginEnd="10dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="63dp"
-        tools:layout_editor_absoluteY="106dp" />
-
     <TextView
         android:id="@+id/homepageBuilding"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="18dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="33dp"
         android:text="Coventry University Buildings"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 
     <ListView
         android:id="@+id/buildingList"
-        android:layout_width="382dp"
-        android:layout_height="543dp"
+        android:layout_width="387dp"
+        android:layout_height="628dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="89dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginBottom="9dp" />
 
 
 </RelativeLayout>
