--- a/app/src/main/res/layout-land/activity_home_page.xml
+++ b/app/src/main/res/layout-land/activity_home_page.xml
@@ -28,19 +28,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
         android:text="Coventry University Buildings"
         android:textSize="30sp" />
 
     <ListView
         android:id="@+id/buildingList"
-        android:layout_width="382dp"
-        android:layout_height="543dp"
+        android:layout_width="695dp"
+        android:layout_height="326dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="89dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="64dp" />
 
 
 </RelativeLayout>
