--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,89 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+app:layout_behavior="@string/appbar_scrolling_view_behavior"
+tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="291dp"
-        android:layout_marginTop="591dp"
-        android:onClick="save"
-        android:text="@string/title_activity_signup" />
+<Button
+    android:id="@+id/save"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="310dp"
+    android:layout_marginTop="611dp"
+    android:onClick="save"
+    android:text="@string/title_activity_signup" />
 
-    <TextView
-        android:id="@+id/textSignupname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="150dp"
-        android:text="Please Provide a Username" />
+<EditText
+    android:id="@+id/userID"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:layout_marginTop="217dp"
+    android:layout_marginEnd="182dp"
+    android:ems="10"
+    android:hint="Enter your SID"
+    android:inputType="number" />
 
-    <TextView
-        android:id="@+id/textPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="239dp"
-        android:text="Please Provide a Password" />
+<TextView
+    android:id="@+id/textID"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="13dp"
+    android:layout_marginTop="173dp"
+    android:text="Please Enter ID Number" />
 
-    <TextView
-        android:id="@+id/textID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="83dp"
-        android:text="Please Enter ID Number" />
+<TextView
+    android:id="@+id/textSignupname"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="13dp"
+    android:layout_marginTop="294dp"
+    android:text="Please Provide a Username" />
 
-    <EditText
-        android:id="@+id/usernameSignup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="138dp"
-        android:layout_marginEnd="4dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Enter Username" />
+<TextView
+    android:id="@+id/textPass"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginStart="13dp"
+    android:layout_marginTop="430dp"
+    android:text="Please Provide a Password" />
 
-    <EditText
-        android:id="@+id/passwordSignup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="2dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Provide a Password"/>
+<EditText
+    android:id="@+id/passwordSignup"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:layout_marginTop="476dp"
+    android:layout_marginEnd="182dp"
+    android:ems="10"
+    android:hint="Provide a Password"
+    android:inputType="textPassword" />
 
-    <EditText
-        android:id="@+id/userID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="196dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="2dp"
-        android:ems="10"
-        android:hint="Enter your SID"
-        android:inputType="number" />
+<EditText
+    android:id="@+id/usernameSignup"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:layout_centerVertical="true"
+    android:layout_marginTop="333dp"
+    android:layout_marginEnd="182dp"
+    android:ems="10"
+    android:hint="Enter Username"
+    android:inputType="textPersonName" />
+
+<TextView
+    android:id="@+id/textView2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="31dp"
+    android:layout_marginEnd="-1dp"
+    android:text="Welcome to Signup, please fill out the form below"
+    android:textSize="30sp" />
 </RelativeLayout>
