--- a/app/src/main/res/layout-land/activity_main_page.xml
+++ b/app/src/main/res/layout-land/activity_main_page.xml
@@ -46,7 +46,7 @@
         android:text="View Buildings" />
 
     <Button
-        android:id="@+id/navExit"
+        android:id="@+id/navLoc"
         android:layout_width="147dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
