Clean up of code and commented new files

--- a/app/src/main/res/layout-land/activity_main_page.xml
+++ b/app/src/main/res/layout-land/activity_main_page.xml
@@ -54,5 +54,5 @@
         android:layout_centerInParent="true"
         android:layout_marginStart="273dp"
         android:layout_marginTop="291dp"
-        android:text="Exit App" />
+        android:text="View Location" />
 </RelativeLayout>
